fix overflow

--- a/frontend/src/app/components/geral/cadastro/cadastro.component.css
+++ b/frontend/src/app/components/geral/cadastro/cadastro.component.css
@@ -1,7 +1,7 @@
 .vh-100 {
-  height: 95vh;
+  height: 100vh;
   margin-bottom: 3vh;
-  overflow-x: scroll;
+  overflow-y: auto;
 }
 
 .container {
@@ -32,11 +32,18 @@
   flex-direction: column;
 }
 
-.heading {
-  font-weight: bold;
-  margin-bottom: 0;
+#heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+#heading>button {
+  background-color: #0e5feb;
+  border: 2px solid black;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 1);
+}
 button {
   margin-right: 10px;
   margin-bottom: 10px;
@@ -49,6 +56,6 @@ button {
 }
 
 #image {
-  /*background-position: center center;*/
-  /*background-repeat: no-repeat;*/
+  height: 100vh;
+  overflow: hidden;
 }
